Fix for WMS-6282: In iPhone, Horizontal scroll is seen for liveform having blob type column.
(cherry picked from commit 2ec28350535c55b3c9cfdd55d977ea9ae06aa633)

--- a/src/main/webapp/styles/less/wm-mobile-widgets.less
+++ b/src/main/webapp/styles/less/wm-mobile-widgets.less
@@ -127,5 +127,7 @@
       }
     }
   }
-
+  .form-group input[type=file] {
+    width : 100%;
+  }
 }
